@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-16T01:00:06Z",
+  "timestamp" : "2024-08-20T00:59:55Z",
   "count_outdated" : 492,
   "uniques_outdated" : 319,
-  "count" : 493,
-  "uniques" : 320,
+  "count" : 495,
+  "uniques" : 322,
   "clones" : [
     {
       "timestamp": "2024-08-15T00:00:00Z",
@@ -13,6 +13,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-08-19T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
