@@ -1,3 +1,12 @@
+2024-08-20T00:59:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10463391192 # 393
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-20
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 319 492 / 320 493
+* notice: next accum: outdated-unq outdated-all / unq all: 319 492 / 322 495
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2024-08-19]
+
 2024-08-16T01:00:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10412862992 # 389
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-16
